<resources>
    <string name="app_name">Scrolling Text</string>
    <string name="article_title">Article Title</string>
    <string name="comment_button">Add comment</string>
    <string name="comment_hint">Leave a comment</string>
    <string name="article_subtitle">Article Subtitle</string>
    <string name="article_text">Lorem ipsum odor amet, consectetuer adipiscing elit. Eu nam senectus mattis lacinia condimentum dictum semper? Id ad eu cras felis nunc neque. Vestibulum lobortis varius nostra parturient convallis maecenas etiam. Id cursus tincidunt convallis mus curabitur proin? Orci euismod metus varius cubilia finibus amet potenti suspendisse. Eleifend convallis fringilla lacus ex eget laoreet suscipit suspendisse gravida. Amet purus dictum turpis sapien nam senectus praesent. Nunc venenatis magna est posuere tincidunt phasellus fringilla volutpat.

Pretium maximus litora erat cubilia; penatibus platea fringilla netus? Felis vestibulum facilisis sem; aenean hac lobortis. Fringilla tempor elementum sodales iaculis odio efficitur ultricies conubia. Mollis sem in laoreet luctus taciti nullam nec aliquam. Tortor fames pellentesque adipiscing condimentum platea netus nibh. Aliquet habitant vehicula platea leo conubia natoque. Quam nascetur mus dapibus varius sed consectetur tempus netus duis. Maximus ante est interdum magna, diam ipsum tempor. Neque conubia condimentum at tellus himenaeos curabitur inceptos augue.

Diam phasellus himenaeos accumsan lobortis odio blandit ex convallis ultricies! Libero egestas felis leo tempor fringilla facilisis praesent. Fames aptent tempus; vel egestas eros facilisi lorem. Inceptos eget tempor nisl euismod taciti? Hendrerit neque faucibus lorem varius gravida in praesent. Vitae egestas neque mollis fringilla cubilia est dignissim class. Rutrum leo in quisque, iaculis per faucibus fames? Ipsum ornare etiam leo laoreet suscipit. Porttitor lobortis aenean magna ultrices suspendisse urna mus.

Consectetur litora natoque consequat metus a in inceptos. Purus iaculis velit rhoncus morbi dolor purus adipiscing ullamcorper. Aptent ligula tellus dolor vulputate parturient inceptos. Tempus phasellus ipsum praesent maximus habitant eros lacus elit. Quis justo nullam, nec mauris eu id praesent. Luctus mi maecenas vivamus nullam rutrum mus eros netus. Habitant tristique metus etiam; platea nullam hendrerit.

Commodo ultricies tristique primis https://www.google.com/ nisl risus ligula. Nulla vivamus vitae mus fusce egestas varius. Ad magna fusce morbi elit vehicula. Semper nibh posuere phasellus nostra semper ut maximus. Aliquet blandit velit sed id consectetur tortor montes. Vehicula platea torquent tempus mus hendrerit nibh. Porta mollis sit libero nulla; proin donec euismod hac. Maecenas adipiscing mi lacinia platea interdum ultricies potenti. Viverra mauris nullam inceptos dignissim; maecenas sollicitudin pulvinar tempus quam.

Felis lectus ac mus dolor dui ac. Hac porta viverra penatibus sed vehicula nullam feugiat. Posuere feugiat orci cras eros feugiat. Erat tempus blandit lacus sagittis et enim proin primis. Risus integer arcu at himenaeos tortor sem. Sollicitudin massa montes phasellus commodo morbi. Vitae class ante rutrum tellus suscipit integer netus? Curae vulputate est sit quisque, cras turpis.</string>
</resources>