<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:layout_margin="16dp">

    <TextView
        android:id="@+id/article_heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/white"
        android:padding="@dimen/padding_regular"
        android:textAppearance="@android:style/TextAppearance.Large"
        android:textStyle="bold"
        android:text="@string/article_title" />

    <!-- Contenedor horizontal para subheading y scroll -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/article_heading"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp">

        <TextView
            android:id="@+id/article_subheading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_regular"
            android:textAppearance="@android:style/TextAppearance"
            android:text="@string/article_subtitle"
            android:layout_gravity="top" />

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/article_scroll"
            android:layout_gravity="top">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/article_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autoLink="web"
                    android:padding="@dimen/padding_regular"
                    android:text="@string/article_text"
                    android:textAppearance="@android:style/TextAppearance" />

                <EditText
                    android:id="@+id/comment_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/comment_hint"
                    android:padding="@dimen/padding_regular"
                    android:enabled="false"
                    android:inputType="text"
                    android:maxLength="100"
                    android:textStyle="italic"
                    android:visibility="gone"/>

                <Button
                    android:id="@+id/comment_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/comment_button"
                    android:backgroundTint="@color/colorPrimary"
                    android:textColor="@color/white"/>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</RelativeLayout>
